--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -19,13 +19,32 @@ h4 {
 small {
     @extend .small;
 }
-
 body {
     background: rgb(232, 232, 232);
     color: rgb(60, 60, 60);
     // Stops Mobile Safari from auto-adjusting font-sizes
     -webkit-text-size-adjust: 100%;
+    
+    @if $debug {
+        &:before, &:after {
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            background: rgba(#000,0.1);
+            color: #FFF;
+            padding: 0px 6px;
+            height: 24px;
+            line-height: 24px;
+            @include border-top-left-radius(4px);
+        }
+        
+        &:after {
+            bottom: 24px;
+            background: rgba(#000,0.05);
+        }
+    }
 }
 
 // Selection colors (easy to forget)
 @include selection-color(unquote("rgb(255,255,158)"));
+
