--- a/sass/partials/_mobile.scss
+++ b/sass/partials/_mobile.scss
@@ -4,6 +4,12 @@
  * Inherits styles from: Default Layout.  */
 
 @media only screen and (max-width: 767px) {
+    @if $debug {
+        body:before {
+            content: "mobile";
+        }
+    }
+    
     #{$less-grid-element} {
         @include grid(3);
     }
