--- a/sass/partials/_tablet.scss
+++ b/sass/partials/_tablet.scss
@@ -4,6 +4,12 @@
  * Inherits styles from: Default Layout.  */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+    @if $debug {
+        body:before {
+            content: "tablet";
+        }
+    }
+    
     #{$less-grid-element} {
         @include grid(8);
     }
