--- a/sass/partials/_wide-mobile.scss
+++ b/sass/partials/_wide-mobile.scss
@@ -4,6 +4,12 @@
  * Inherits styles from: Default Layout, Mobile Layout.  */
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+    @if $debug {
+        body:before {
+            content: "wide mobile";
+        }
+    }
+    
     #{$less-grid-element} {
         @include grid(5);
     }
