Add flipbook skeleton.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -9,13 +9,19 @@
 
 $debug: true;
 
+@import "compass";
+
 @import "less/reset";
 @import "less/framework";
 @import "less/typography/16px";
 
 @import "partials/global";
+
+@import "partials/elements/flipbook";
+
 @import "partials/default";
 @import "partials/tablet";
 @import "partials/mobile";
 @import "partials/wide-mobile";
 @import "partials/high-px-ratio";
+
