--- a/sass/partials/elements/_flipbook.scss
+++ b/sass/partials/elements/_flipbook.scss
@@ -2,8 +2,36 @@
     .flap {
         height: 200px;
         margin-bottom: 1px;
-        @include background(#FFF linear-gradient(-87deg, rgba(#000,0) 40%, rgba(#000,0.05)));
+        @include background(#EEE 
+            linear-gradient(-45deg, 
+                rgba(#000,0) 0%, 
+                rgba(#000,0) 25%, 
+                rgba(#FFF,.5) 25%, 
+                rgba(#FFF,.5) 50%,
+                rgba(#000,0) 50%,
+                rgba(#000,0) 75%,
+                rgba(#FFF,.5) 75%,
+                rgba(#FFF,.5) 100%
+            )
+        );
+        @include background-size(10px 10px);
         @include border-radius(4px);
         @include box-shadow(rgba(#000,0.1) 0 0 3px);
+        
+        img {
+            pointer-events: none;
+        }
+    }
+    
+    #top {
+        height: 230px;
+    }
+    
+    #middle {
+        height: 286px;
+    }
+    
+    #bottom {
+        height: 84px;
     }
 }
