--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,1 +1,221 @@
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,hr,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figure,figcaption,hgroup,menu,footer,header,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0}article,aside,canvas,figure,figure img,figcaption,hgroup,footer,header,nav,section,audio,video{display:block}a img{border:0}.gigantic{font-size:110px;line-height:120px;letter-spacing:-2px}.huge,h1{font-size:68px;line-height:72px;letter-spacing:-1px}.large,h2{font-size:42px;line-height:48px}.bigger,h3{font-size:26px;line-height:36px}.big,h4{font-size:22px;line-height:30px}body{font:16px/24px Georgia, serif}.small,small{font-size:13px;line-height:18px}body{background:#e8e8e8;color:#3c3c3c;-webkit-text-size-adjust:100%}body:before,body:after{position:fixed;bottom:0;right:0;background:rgba(0, 0, 0, 0.1);color:#FFF;padding:0px 6px;height:24px;line-height:24px;-moz-border-radius-topleft:4px;-webkit-border-top-left-radius:4px;-o-border-top-left-radius:4px;-ms-border-top-left-radius:4px;-khtml-border-top-left-radius:4px;border-top-left-radius:4px}body:after{bottom:24px;background:rgba(0, 0, 0, 0.05)}::selection{background:rgb(255,255,158)}::-moz-selection{background:rgb(255,255,158)}img::selection{background:transparent}img::-moz-selection{background:transparent}body{-webkit-tap-highlight-color:rgb(255,255,158)}#flipbook .flap{height:200px;margin-bottom:1px;background:white -webkit-gradient(linear, -87deg, -87deg, color-stop(40%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.05)));background:white -webkit-linear-gradient(-87deg, rgba(0,0,0,0) 40%,rgba(0,0,0,0.05));background:white -moz-linear-gradient(-87deg, rgba(0,0,0,0) 40%,rgba(0,0,0,0.05));background:white -o-linear-gradient(-87deg, rgba(0,0,0,0) 40%,rgba(0,0,0,0.05));background:white -ms-linear-gradient(-87deg, rgba(0,0,0,0) 40%,rgba(0,0,0,0.05));background:white linear-gradient(-87deg, rgba(0,0,0,0) 40%,rgba(0,0,0,0.05));-moz-border-radius:4px;-webkit-border-radius:4px;-o-border-radius:4px;-ms-border-radius:4px;-khtml-border-radius:4px;border-radius:4px;-moz-box-shadow:rgba(0, 0, 0, 0.1) 0 0 3px;-webkit-box-shadow:rgba(0, 0, 0, 0.1) 0 0 3px;-o-box-shadow:rgba(0, 0, 0, 0.1) 0 0 3px;box-shadow:rgba(0, 0, 0, 0.1) 0 0 3px}body{width:896px;padding:72px 48px 84px;margin:0 auto}body:before{content:"default"}#flipbook{width:712px;margin-right:24px;margin:0 auto}@media only screen and (min-width: 768px) and (max-width: 991px){body:before{content:"tablet"}body{width:712px;padding:48px 28px 60px}#flipbook{width:712px}}@media only screen and (max-width: 767px){body:before{content:"mobile"}body{width:252px;padding:48px 34px 60px}#flipbook{width:252px}}@media only screen and (min-width: 480px) and (max-width: 767px){body:before{content:"wide mobile"}body{width:436px;padding:36px 22px 48px}#flipbook{width:436px}}@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2){body:after{content:"retina"}}
+/* Less Framework 4
+ * http://lessframework.com
+ * by Joni Korpi
+ * License: http://creativecommons.org/licenses/MIT/ */
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, a, abbr, address, cite, code, del, dfn, em,
+img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, hr,
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figure, figcaption, hgroup,
+menu, footer, header, nav, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+article, aside, canvas, figure, figure img, figcaption, hgroup,
+footer, header, nav, section, audio, video {
+  display: block;
+}
+
+a img {
+  border: 0;
+}
+
+.gigantic {
+  font-size: 110px;
+  line-height: 120px;
+  letter-spacing: -2px;
+}
+
+.huge, h1 {
+  font-size: 68px;
+  line-height: 72px;
+  letter-spacing: -1px;
+}
+
+.large, h2 {
+  font-size: 42px;
+  line-height: 48px;
+}
+
+.bigger, h3 {
+  font-size: 26px;
+  line-height: 36px;
+}
+
+.big, h4 {
+  font-size: 22px;
+  line-height: 30px;
+}
+
+body {
+  font: 16px/24px Georgia, serif;
+}
+
+.small, small {
+  font-size: 13px;
+  line-height: 18px;
+}
+
+body {
+  background: #e8e8e8;
+  color: #3c3c3c;
+  -webkit-text-size-adjust: 100%;
+}
+body:before, body:after {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.1);
+  color: #FFF;
+  padding: 0px 6px;
+  height: 24px;
+  line-height: 24px;
+  -moz-border-radius-topleft: 4px;
+  -webkit-border-top-left-radius: 4px;
+  -o-border-top-left-radius: 4px;
+  -ms-border-top-left-radius: 4px;
+  -khtml-border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
+body:after {
+  bottom: 24px;
+  background: rgba(0, 0, 0, 0.05);
+}
+
+::selection {
+  background: rgb(255,255,158);
+}
+
+::-moz-selection {
+  background: rgb(255,255,158);
+}
+
+img::selection {
+  background: transparent;
+}
+
+img::-moz-selection {
+  background: transparent;
+}
+
+body {
+  -webkit-tap-highlight-color: rgb(255,255,158);
+}
+
+#flipbook .flap {
+  height: 200px;
+  margin-bottom: 1px;
+  background: #eeeeee -webkit-gradient(linear, -45deg, -45deg, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(25%, rgba(0, 0, 0, 0)), color-stop(25%, rgba(255, 255, 255, 0.5)), color-stop(50%, rgba(255, 255, 255, 0.5)), color-stop(50%, rgba(0, 0, 0, 0)), color-stop(75%, rgba(0, 0, 0, 0)), color-stop(75%, rgba(255, 255, 255, 0.5)), color-stop(100%, rgba(255, 255, 255, 0.5)));
+  background: #eeeeee -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 25%, rgba(255, 255, 255, 0.5) 25%, rgba(255, 255, 255, 0.5) 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 75%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0.5) 100%);
+  background: #eeeeee -moz-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 25%, rgba(255, 255, 255, 0.5) 25%, rgba(255, 255, 255, 0.5) 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 75%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0.5) 100%);
+  background: #eeeeee -o-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 25%, rgba(255, 255, 255, 0.5) 25%, rgba(255, 255, 255, 0.5) 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 75%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0.5) 100%);
+  background: #eeeeee -ms-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 25%, rgba(255, 255, 255, 0.5) 25%, rgba(255, 255, 255, 0.5) 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 75%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0.5) 100%);
+  background: #eeeeee linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 25%, rgba(255, 255, 255, 0.5) 25%, rgba(255, 255, 255, 0.5) 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 75%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0.5) 100%);
+  -moz-background-size: 10px 10px;
+  -webkit-background-size: 10px 10px;
+  -o-background-size: 10px 10px;
+  background-size: 10px 10px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px;
+  -o-box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 0 3px;
+}
+#flipbook .flap img {
+  pointer-events: none;
+}
+#flipbook #top {
+  height: 230px;
+}
+#flipbook #middle {
+  height: 286px;
+}
+#flipbook #bottom {
+  height: 84px;
+}
+
+/* Default Layout: 992px.
+ * Gutters: 24px.
+ * Outer margins: 48px.
+ * Leftover space for scrollbars @1024px: 32px.  */
+body {
+  width: 896px;
+  margin: 24px auto;
+}
+
+body:before {
+  content: "default";
+}
+
+#flipbook {
+  width: 528px;
+  margin-right: 24px;
+}
+
+/* Tablet Layout: 768px.
+ * Gutters: 24px.
+ * Outer margins: 28px.
+ * Inherits styles from: Default Layout.  */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  body:before {
+    content: "tablet";
+  }
+
+  body {
+    width: 712px;
+  }
+
+  #flipbook {
+    width: 712px;
+  }
+}
+/* Mobile Layout: 320px.
+ * Gutters: 24px.
+ * Outer margins: 34px.
+ * Inherits styles from: Default Layout.  */
+@media only screen and (max-width: 767px) {
+  body:before {
+    content: "mobile";
+  }
+
+  body {
+    width: 252px;
+  }
+
+  #flipbook {
+    width: 252px;
+  }
+}
+/* Wide Mobile Layout: 480px.
+ * Gutters: 24px.
+ * Outer margins: 22px.
+ * Inherits styles from: Default Layout, Mobile Layout.  */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  body:before {
+    content: "wide mobile";
+  }
+
+  body {
+    width: 436px;
+  }
+
+  #flipbook {
+    width: 436px;
+  }
+}
+/* Retina media query.
+   Overrides styles for devices with a
+   device-pixel-ratio of 2+, such as iPhone 4.  */
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
+  body:after {
+    content: "retina";
+  }
+}
