--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -25,6 +25,8 @@ body {
     color: rgb(60, 60, 60);
     // Stops Mobile Safari from auto-adjusting font-sizes
     -webkit-text-size-adjust: 100%;
+    height: 100%;
+    overflow: hidden;
     
     @if $debug {
         &:before, &:after {
