--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -63,6 +63,8 @@ body {
   background: #e8e8e8;
   color: #3c3c3c;
   -webkit-text-size-adjust: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 body:before, body:after {
   position: fixed;
