--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -27,6 +27,7 @@ body {
     -webkit-text-size-adjust: 100%;
     height: 100%;
     overflow: hidden;
+    font-family: "Helvetica Neue", serif;
     
     @if $debug {
         &:before, &:after, #reloader {
