--- a/sass/partials/elements/_flipbook.scss
+++ b/sass/partials/elements/_flipbook.scss
@@ -26,10 +26,9 @@
         
         .price {
             position: absolute;
-            right: 0;
-            bottom: 0;
+            right: 10px;
+            bottom: 10px;
             padding: 5px 10px;
-            margin: 10px;
             z-index: 1000;
             @include background(#CCC linear-gradient(top, rgba(#FFF, .8), rgba(#FFF, 0)));
             @include border-radius(4px);
