Add add2home script.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -19,6 +19,7 @@ $less-grid-padding: false;
 @import "partials/global";
 
 @import "partials/elements/flipbook";
+@import "partials/elements/add2home";
 
 @import "partials/default";
 @import "partials/tablet";
